--- a/RGTest/Base.lproj/Main.storyboard
+++ b/RGTest/Base.lproj/Main.storyboard
@@ -1,25 +1,114 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kpl-qL-6Ea">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="vvE-SJ-7zO">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <navigationController id="Kpl-qL-6Ea" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vAp-EN-guw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="iRE-it-MmP" kind="relationship" relationship="rootViewController" id="ai2-zs-yRM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I7d-38-Jv1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-671" y="69"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Div-P3-nBm">
+            <objects>
+                <viewController id="NbD-ln-vkW" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="qau-QZ-u5b"/>
+                        <viewControllerLayoutGuide type="bottom" id="nEy-RV-1V0"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="kfU-W2-3XI">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="A5A-Oa-kUZ"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iqp-hu-PgE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="801" y="428"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zcK-AT-RZl">
+            <objects>
+                <viewController id="WEB-3T-Vue" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="R0d-S6-LJX"/>
+                        <viewControllerLayoutGuide type="bottom" id="fpt-0P-lgu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yyd-MV-pzw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xt-p7-dwS">
+                                <rect key="frame" x="20" y="72" width="496" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pDY-FV-s73">
+                                <rect key="frame" x="524" y="72" width="56" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="AGf-D8-E4d"/>
+                                    <constraint firstAttribute="width" constant="56" id="kjh-O5-gEK"/>
+                                </constraints>
+                                <state key="normal" title="Search"/>
+                            </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oXH-Yu-hlH">
+                                <rect key="frame" x="20" y="110" width="560" height="159"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="159" id="2Ac-5n-yzk"/>
+                                </constraints>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="oXH-Yu-hlH" secondAttribute="trailing" id="9cE-jh-Epr"/>
+                            <constraint firstItem="oXH-Yu-hlH" firstAttribute="top" secondItem="0xt-p7-dwS" secondAttribute="bottom" constant="8" id="CKI-zv-ZbY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pDY-FV-s73" secondAttribute="trailing" id="N8p-S1-Ili"/>
+                            <constraint firstItem="0xt-p7-dwS" firstAttribute="top" secondItem="R0d-S6-LJX" secondAttribute="bottom" constant="8" id="OJB-Qf-uel"/>
+                            <constraint firstItem="pDY-FV-s73" firstAttribute="top" secondItem="R0d-S6-LJX" secondAttribute="bottom" constant="8" id="bh1-gq-Tna"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="oXH-Yu-hlH" secondAttribute="leading" id="j1a-cO-XNM"/>
+                            <constraint firstItem="pDY-FV-s73" firstAttribute="leading" secondItem="0xt-p7-dwS" secondAttribute="trailing" constant="8" id="kyY-zV-XJB"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="0xt-p7-dwS" secondAttribute="leading" id="lfw-AJ-Mmd"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="1Q0-Mw-wfJ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zLA-9e-fwk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="801" y="-283"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="1FP-02-oeq">
+            <objects>
+                <tabBarController id="iRE-it-MmP" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="NqW-wZ-iGr"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="xig-3z-RnR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="WEB-3T-Vue" kind="relationship" relationship="viewControllers" id="u0n-Dy-dLY"/>
+                        <segue destination="NbD-ln-vkW" kind="relationship" relationship="viewControllers" id="HtU-5E-Qmr"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8VT-vq-5Yv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="49" y="69"/>
         </scene>
     </scenes>
 </document>
