--- a/RGTest/Base.lproj/Main.storyboard
+++ b/RGTest/Base.lproj/Main.storyboard
@@ -35,16 +35,9 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xt-p7-dwS">
-                                <rect key="frame" x="20" y="72" width="496" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="WEB-3T-Vue" id="FkA-zR-UFw"/>
-                                </connections>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pDY-FV-s73">
-                                <rect key="frame" x="524" y="72" width="56" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pDY-FV-s73">
+                                <rect key="frame" x="524" y="8" width="56" height="30"/>
+                                <accessibility key="accessibilityConfiguration" label="Search"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="AGf-D8-E4d"/>
                                     <constraint firstAttribute="width" constant="56" id="kjh-O5-gEK"/>
@@ -54,8 +47,8 @@
                                     <action selector="searchButtonTouchUp:" destination="WEB-3T-Vue" eventType="touchUpInside" id="ASQ-3K-i2A"/>
                                 </connections>
                             </button>
-                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oXH-Yu-hlH">
-                                <rect key="frame" x="20" y="110" width="560" height="159"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oXH-Yu-hlH">
+                                <rect key="frame" x="20" y="46" width="560" height="159"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="159" id="2Ac-5n-yzk"/>
                                 </constraints>
@@ -64,6 +57,15 @@
                                     <outlet property="delegate" destination="WEB-3T-Vue" id="Cpp-UP-gV1"/>
                                 </connections>
                             </pickerView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0xt-p7-dwS">
+                                <rect key="frame" x="20" y="8" width="496" height="30"/>
+                                <accessibility key="accessibilityConfiguration" label="Search Text Field"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="WEB-3T-Vue" id="FkA-zR-UFw"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -134,6 +136,9 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Search Collection View"/>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <outlet property="dataSource" destination="3yx-Ol-n5y" id="MrD-UL-W31"/>
                             <outlet property="delegate" destination="3yx-Ol-n5y" id="dzg-BC-STQ"/>
@@ -207,8 +212,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="330"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="pjF-kn-IkC">
-                                                    <rect key="frame" x="8" y="8" width="584" height="313"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="pjF-kn-IkC">
+                                                    <rect key="frame" x="8" y="8" width="584" height="314"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -279,6 +284,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="bcP-WB-Jbj"/>
+        <segue reference="nLH-BK-Twh"/>
     </inferredMetricsTieBreakers>
 </document>
